<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#006dc2"
    tools:context=".Main_Application$Optional"
    android:orientation="vertical">


    <TextView android:id="@+id/optional_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/optional_text"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <TextView android:id="@+id/optional_label_income"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/optional_text_income"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <EditText android:id="@+id/income" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:singleLine="false" />

    <RadioGroup android:id="@+id/income_picker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton android:id="@+id/income_hourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly" />
        <RadioButton android:id="@+id/income_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />
        <RadioButton android:id="@+id/income_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly" />
    </RadioGroup>

    <TextView android:id="@+id/optional_label_age"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/optional_text_age"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <EditText android:id="@+id/age" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:singleLine="false" />

    <TextView android:id="@+id/optional_label_gender"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/optional_text_gender"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <RadioGroup android:id="@+id/gender_picker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />
        <RadioButton android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
        <RadioButton android:id="@+id/gender_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <TextView android:id="@+id/swipe_message"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/swipe_message_text"
        android:layout_gravity="center"
        android:layout_weight="1" />


</LinearLayout>
