<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#006dc2"
    tools:context=".Main_Application$Transportation"
    android:orientation="vertical">


    <TextView android:id="@+id/transportation_quote_label" android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="Inspirational quote here."
        android:layout_gravity="center"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/transportation_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@mipmap/ic_transportation"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <TextView android:id="@+id/transportation_label_car"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/transportation_text_car"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <RadioGroup android:id="@+id/transportation_picker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton android:id="@+id/hasCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
        <RadioButton android:id="@+id/noCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView android:id="@+id/transportation_label_insurance"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/transportation_text_insurance"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <EditText android:id="@+id/carInsurance" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:singleLine="false" />

    <TextView android:id="@+id/transportation_label_gas"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/transportation_text_gas"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <EditText android:id="@+id/gas" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:singleLine="false" />

    <TextView android:id="@+id/transportation_label_nocar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/transportation_text_nocar"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <EditText android:id="@+id/transportation" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:singleLine="false" />

    <TextView android:id="@+id/swipe_message"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:text="@string/swipe_message_text"
        android:layout_gravity="center"
        android:layout_weight="1" />


</LinearLayout>
