<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#006dc2"
    tools:context=".Main_Application$Results"
    android:orientation="vertical">

    <TableRow>
    <TextView android:id="@+id/results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/results_text"
        android:layout_gravity="center"
        android:layout_weight="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="end"
            android:text="@string/results_text_need"
            android:layout_weight="1"/>
        <TextView android:id="@+id/results_totalMonthlyNeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="start"
            android:layout_weight="1"/>
    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="end"
            android:text="@string/results_text_want"
            android:layout_weight="1"/>
        <TextView android:id="@+id/results_totalMonthlyWant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="start"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="end"
            android:text="@string/results_text_income"
            android:layout_weight="1"/>
        <TextView android:id="@+id/results_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="start"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="end"
            android:text="@string/results_text_difference"
            android:layout_weight="1"/>
        <TextView android:id="@+id/results_difference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="start"
            android:layout_weight="1"/>
    </TableRow>


</TableLayout>
